--- a/src/App.EndPoints.MVC/App.EndPoints.MVC.csproj
+++ b/src/App.EndPoints.MVC/App.EndPoints.MVC.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\App.Infra.Data.Repos.Ef\App.Infra.Data.Repos.Ef.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+  </ItemGroup>
+
 </Project>
