--- a/src/App.EndPoints.MVC/App.EndPoints.MVC.csproj
+++ b/src/App.EndPoints.MVC/App.EndPoints.MVC.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExchangeProxy" Version="1.1.0" />
+    <!--<PackageReference Include="ExchangeProxy" Version="1.1.0" />-->
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
